# fast-updates

./: .env.example  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  hardhat.config.ts  hardhat.utils.ts  nyc.config.js  package.json  tsconfig.json
.github/workflows/: build-docker.yml
client/: run-fast-updates-provider.ts
client/config/: price-feed.ts  retries.ts
client/providers/: ExamplePriceFeedProvider.ts  FastUpdatesProvider.ts  Web3Provider.ts
client/utils/: logger.ts  retry.ts  sortition.ts  web3.ts
deployment/: docker-compose.yaml
deployment/config/: FTSOParameters.ts  config-docker.json  config-local.json  config-scdev.json  ftso.ts  index.ts  paths.ts  test-11-accounts.json
deployment/scripts/: deploy-contracts.ts  run-admin-daemon.ts  run-price-voter.ts  run-simulation-old.ts
deployment/simulation/: Dockerfile  deployed-contracts.json  docker-compose.yaml
deployment/tasks/: chain-config.ts  common.ts  deploy-contracts.ts  run-admin-daemon.ts  run-admin-daemon_old.ts
deployment/utils/: fixed-point-arithmetic.ts  index.ts  time.ts
go-client/: Dockerfile  Makefile  README.md  config.toml  go.mod  go.sum  main.go
go-client/client/: client.go  client_test.go  (+4 more)
py-visualizer/: .gitignore  README.md  app.py  io_handler.py  pyproject.toml
simulation/: docker-compose.yaml
src/: PriceVoter.ts  Sortition.ts
test/: FastUpdater.ts  FastUpdaters.ts  IncentiveManager.ts  docker-compose.yaml  voting-utils.ts
ts-simulation/: .gitignore  README.md
visualizer/: .gitignore  README.md  app.py  helpers.py  pyproject.toml
(+155 files in other folders)
