[tool.poetry]
name = "visualizer"
version = "0.1.0"
description = ""
authors = ["dineshpinto <annual.fallout_0z@icloud.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.15.0"
pandas = "^2.2.0"
dash-bootstrap-components = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E", # pycodestyle-error
    "W", # pycodestyle-warning
    "F", # pyflakes
    "N", # pep8-naming
    "B", # flake8-bugbear
    "I", # isort
    "ASYNC", # flake8-async
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
]

[tool.ruff.format]
docstring-code-format = true